# journey_miles_backend

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/statement/: apps.py
apps/statement/migrations/: 0001_initial.py
apps/statement/models/: __init__.py
apps/statement/serializer/: statement_serializer.py
apps/statement/views/: statement_home_list_view.py  statement_view_set.py
apps/trip/: apps.py
apps/trip/migrations/: 0002_destiny.py  0003_alter_destiny_photo.py  0004_alter_statement_photo.py  0005_rename_photo_destiny_photo1_destiny_description_and_more.py
apps/trip/models/: __init__.py  destiny_model.py  statement_model.py
apps/trip/serializer/: destiny_serializer.py  statement_serializer.py
apps/trip/tests/: test_destiny_model.py  test_destiny_serializer.py  test_statement_model.py  test_statement_serializer.py
apps/trip/views/: destiny_view_set.py  statement_home_list_view.py  statement_view_set.py
core/: manage.py
core/apps/statement/: apps.py
core/apps/statement/migrations/: 0001_initial.py
core/apps/statement/models/: statement_model.py
core/apps/statement/serializer/: statement_serializer.py
core/apps/statement/views/: statement_home_list_view.py  statement_view_set.py
core/project/: settings.py  urls.py
project/: settings.py  urls.py
